<resources>
    <string name="app_name">RandomWords</string>
    <string name="today">Пожелание на сегодня!!!</string>
    <string name="show">Show</string>
    <string name="send">Отправить</string>
    <string name="copy">Копировать</string>
    <string name="you_want_exit">Вы точно хотите выйти?</string>
    <string name="no">Нет</string>
    <string name="yue">Да</string>
    <string name="exit">Выход</string>
</resources>